--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -111,7 +111,7 @@
     height: 100%;
     .title_movie-item {
         font-size: 18px;
-        font-weight: 700;
+        font-weight: 500;
         width: 120px;
         white-space: nowrap;
         -webkit-line-clamp: 1; /* số dòng hiển thị */
@@ -120,11 +120,12 @@
         text-overflow: ellipsis;
         color: var(--primary-white);
         line-height: 18px;
-        margin-bottom: 4px;
     }
     .actor_movie-item {
         font-size: 14px;
-        width: 20px;
+        width: 120px;
+        margin-top: 8px;
+        margin-bottom: 0;
         white-space: nowrap;
         -webkit-line-clamp: 1; /* số dòng hiển thị */
         -webkit-box-orient: horizontal;
@@ -149,8 +150,8 @@
 .time_zone-item {
     display: flex;
     position: relative;
-    margin-top: 4px;
     padding-left: 2px;
+    margin-top: 8px;
     align-items: center;
 
     .all_block-zone {
