--- a/src/Page/MovieDetail/MovieDetail.module.scss
+++ b/src/Page/MovieDetail/MovieDetail.module.scss
@@ -154,7 +154,7 @@
     }
 }
 
-@media screen and (max-width: 818px) {
+@media screen and (max-width: 840px) {
     .top_main-image {
         position: relative;
     }
@@ -164,7 +164,13 @@
         display: none;
     }
     .right_main-content {
-        padding-left: 10px;
+        padding-left: 0;
+        .info {
+            display: none;
+        }
+        .bottom_content-right {
+            margin-top: 100px;
+        }
     }
 
     // Trên mobile
@@ -186,7 +192,7 @@
                 padding: 0;
                 color: var(--primary-white);
             }
-            .stars {
+            .stars-mobile {
                 display: flex;
                 align-items: center;
                 color: var(--primary-white);
@@ -203,6 +209,7 @@
                 padding: 5px;
                 align-items: center;
                 text-align: center;
+                border-radius: 6px;
                 width: 110px;
                 color: var(--primary-white);
                 background-color: #ff9966;
@@ -234,14 +241,17 @@
             padding-left: 0;
             .name {
                 padding: 0;
+                font-size: 18px;
                 color: var(--primary-white);
             }
             .stars {
                 display: flex;
                 align-items: center;
+
                 color: var(--primary-white);
                 .star_icon {
                     margin-right: 4px;
+                    font-size: 12px;
                     color: yellow;
                 }
             }
@@ -329,24 +339,42 @@
     }
     .infor_item-movie {
         height: 60px;
+        background-color: var(--primary-black);
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         text-align: center;
         align-items: center;
-        background-color: var(--primary-black);
+        justify-content: center;
         .title_movie-item {
+            max-width: 130px;
             color: var(--primary-white);
-            max-width: 160px;
-            overflow: hidden;
+            font-family: 'Roboto', 'sans-serif';
+            font-weight: 500;
             white-space: nowrap;
+            -webkit-line-clamp: 1; /* số dòng hiển thị */
+            -webkit-box-orient: horizontal;
+            overflow: hidden;
             text-overflow: ellipsis;
+            font-size: 16px;
+            line-height: 16px;
+            margin-bottom: 0;
         }
         .actor_movie-item {
-            color: #999999;
-            max-width: 200px;
-            overflow: hidden;
+            margin-top: 0;
+            margin-bottom: 0;
+            max-width: 110px;
+            font-family: 'Roboto', 'sans-serif';
             white-space: nowrap;
+            -webkit-line-clamp: 1; /* số dòng hiển thị */
+            -webkit-box-orient: horizontal;
+            overflow: hidden;
+            margin-top: 4px;
             text-overflow: ellipsis;
+            font-size: 16px;
+            line-height: 16px;
+            color: #aaaaaa;
+            margin-bottom: 0;
         }
     }
 }
