--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -204,16 +204,16 @@
         background-color: #322b2b;
 
         .descibe_item {
-            display: block;
-            display: -webkit-box;
-            line-height: 2.1;
+            // display: block;
+            // display: -webkit-box;
+            line-height: 1.8;
             margin-bottom: 0;
-            height: 12px * 2.1 * 3;
+            // height: 12px * 2.1 * 3;
             font-size: 12px;
-            -webkit-line-clamp: 3; /* số dòng hiển thị */
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            // -webkit-line-clamp: 3; /* số dòng hiển thị */
+            // -webkit-box-orient: vertical;
+            // overflow: hidden;
+            // text-overflow: ellipsis;
         }
         a {
             font-size: 12px;
@@ -236,6 +236,97 @@
         background-color: #1877f2;
     }
 }
+
+// Comments
+.Container-comments {
+    width: 100%;
+    background-color: var(--primary-white);
+    border-radius: 6px;
+    padding: 10px;
+    margin-bottom: 20px;
+
+    .title {
+        font-size: 14px;
+        font-weight: 700;
+        color: var(--primary-black);
+    }
+
+    .comments-group {
+        display: flex;
+        flex-direction: column;
+
+        .comments_about {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            span {
+                color: var(--primary-black);
+                font-weight: 600;
+            }
+
+            .text-sort {
+                margin-right: 10px;
+            }
+        }
+        .form_comments {
+            margin-top: 30px;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+
+            // ảnh avatar account và comments
+            .comments-main {
+                display: flex;
+            }
+            .image_avatar-commnets {
+                width: 50px;
+                height: 50px;
+                margin-right: 10px;
+
+                .avatar {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            // .comments-by {
+            //     font-size: 16px;
+            // }
+            .post_comments {
+                flex: 1;
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                padding-top: 10px;
+
+                border: 1px solid #ccc;
+
+                input {
+                    width: 100%;
+                    padding-left: 10px;
+                    height: 40px;
+                    padding-bottom: 10px;
+                }
+                .block-submit {
+                    background-color: #f5f6f7;
+                    padding: 4px 0;
+                    border-top: 1px solid #ccc;
+                }
+                .btn_submit-comments {
+                    width: 60px;
+                    border-radius: 3px;
+                    text-align: left;
+                    background-color: #4267b2;
+                    color: var(--primary-white);
+                    padding: 5px 10px;
+                    margin-left: 92%;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 465px) {
     .group_setting {
         justify-content: flex-start !important;
