--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -27,6 +27,9 @@
 }
 .menu_container {
     flex: 6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .menu-list {
         display: flex;
@@ -45,6 +48,9 @@
                 background-color: #ff6633;
             }
         }
+    }
+    .search {
+        width: 340px;
     }
 }
 
