--- a/src/Components/Layout/Search/Search.module.scss
+++ b/src/Components/Layout/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .search {
     position: relative;
-    width: 240px;
+    width: 100%;
     height: 30px;
     padding-left: 12px;
     background-color: var(--primary-white);
@@ -16,8 +16,11 @@
         outline: none;
         padding-bottom: 2px;
         font-size: 13px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
         border: none;
-        background-color: transparent;
     }
 
     input:not(:placeholder-shown) ~ .search_button {
@@ -38,6 +41,7 @@
         border-color: blue;
     }
 }
+// Nút "X" xóa text timg kiếm
 .clear {
     transform: translateY(-50%);
 }
@@ -54,6 +58,7 @@
 .search_button {
     width: 50px;
     height: 100%;
+    margin-top: 2px;
     border: none;
     background-color: transparent;
     color: #999999;
@@ -68,7 +73,6 @@
 
 // Search_result
 .search_result {
-    width: 240px;
     min-height: 129px;
     max-height: 350px;
     padding: 12px;
