--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -362,6 +362,33 @@
         display: flex;
         flex-direction: column;
 
+        .info_des {
+            padding: 10px 20px;
+            background-color: #f0f2f5;
+            border-radius: 20px;
+            position: relative;
+
+            .number_like-comments {
+                padding: 2px 5px;
+                border-radius: 25px;
+                box-shadow: 5px 5px 10px #ccc;
+                background-color: #fff;
+                position: absolute;
+                right: -30px;
+                display: flex;
+                bottom: -2px;
+
+                .icon_heart {
+                    color: #f23c5c;
+                }
+
+                span {
+                    color: #333;
+                    font-size: 12px;
+                }
+            }
+        }
+
         h4 {
             font-size: 14px;
             color: #4267b2;
@@ -374,10 +401,12 @@
             margin-top: 4px;
         }
         .option {
+            margin-left: 10px;
             button {
                 border: none;
                 background-color: transparent;
-                color: #1877f2;
+                color: #65676b;
+                font-weight: 700;
                 font-size: 12px;
             }
             .feedback {
