--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -53,12 +53,20 @@
             margin: 0;
             display: none;
             position: absolute;
-            padding-right: 32px;
             background-color: black;
             border-radius: 6px;
             flex-direction: column;
             padding-top: 12px;
             animation: fadeIn ease-in-out 0.5s;
+        }
+        .list_series {
+            padding: 10px 0;
+            min-width: 120px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            justify-content: center;
         }
         .series_item {
             float: left;
