--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -42,6 +42,7 @@
             color: var(--primary-white);
             margin-right: 30px;
             padding: 0 5px;
+            font-size: 16px;
             border-radius: 5px;
             transition: background-color 0.3s;
             cursor: pointer;
@@ -60,18 +61,17 @@
             animation: fadeIn ease-in-out 0.5s;
         }
         .list_series {
-            padding: 10px 0;
-            min-width: 120px;
+            padding: 10px 10px;
             display: flex;
+            min-width: 160px;
             align-items: center;
             flex-direction: column;
-            text-align: center;
-            justify-content: center;
         }
         .series_item {
             float: left;
             list-style: none;
             margin-bottom: 10px;
+            font-size: 14px;
             color: var(--primary-white);
             text-decoration: none;
             width: 100%;
