--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -78,6 +78,28 @@
     width: 100%;
     height: 475px;
 }
+.container_play {
+    display: none;
+    position: absolute;
+    width: 55px;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 55px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    background-color: #cccc33;
+    animation: fadeIn ease-in-out 0.6s;
+    .icon_play {
+        font-size: 25px;
+        color: var(--primary-white);
+    }
+}
+.item_movie:hover .container_play {
+    display: flex;
+}
 
 .item_movie:hover .image_movie {
     transform: scale(1.1);
@@ -97,7 +119,7 @@
     .image_movie {
         width: 100%;
         height: 100%;
-        transition: all 0.2s ease-in-out;
+        transition: all 0.3s ease-in-out;
         object-fit: cover;
     }
 }
