--- a/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    background: var(--primary-white);
+    background: var(--primary-bg);
     line-height: 1.428571429;
     border: none;
     margin: 0 auto;
