--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -11,11 +11,9 @@
     margin-left: 50px;
 
     .feature_content {
+        background-color: #ccc;
+        width: 100%;
         height: 50vh;
-        background-color: red;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--primary-bg)),
-            url('https://wallpapers.com/images/featured/captain-america-uymfdo8a063hcbxb.jpg');
-        object-fit: cover;
         padding: 40px;
 
         .feature_title {
