--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -39,7 +39,7 @@
 
     .player_video {
         width: 100%;
-        max-height: 540px;
+        height: 540px;
 
         background-color: var(--primary-black);
     }
